web/2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: web
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: web-container
          image: nginx
          ports:
            # https://stackoverflow.com/a/65270688/2122990
            - name: web-port
              containerPort: 80
