web/3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      targetPort: web-port
      port: 80
      nodePort: 30123
  type: NodePort
